# MCControl

./: Cargo.toml  README.md
pages/: index.html
src/: admin.rs  main.rs
static/: actions.js  app.js  commands.js  logs.js  status.js  styles.css
